# charon

./: .gitignore  Cargo.toml  README.md  example_config.yaml
proto/: charond.proto
src/: cli.rs  client.rs  config.rs  globals.rs  input.rs  lib.rs  package.rs  prompt.rs  request.rs  server.rs  systemd.rs
src/cli/: mod.rs  tests.rs
src/server/: mod.rs  tests.rs
