[package]
name = "charon"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "*", features = [ "derive" ] }
serde_json = "*"
git2 = { version = "*", features = [ "https" ] }
anyhow = "*"
clap = { version = "*", features = [ "derive" ] }
curl = "*"

[dev-dependencies]
tempfile = "*"
lazy_static = "*"
libc = "*"

[features]
livetests = []
