[package]
name = "charon"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "*", features = [ "derive" ] }
serde_json = "*"
git2 = { version = "*", features = [ "https" ] }
anyhow = "*"
clap = { version = "*", features = [ "derive" ] }
curl = "*"
url = "*"
zbus_systemd = { version = "*", features = [ "systemd1" ] }
tokio = { version = "*", features = [ "full" ] }

[dev-dependencies]
tempfile = "*"
lazy_static = "*"
libc = "*"
reqwest = "*"

[features]
livetests = [ ]
