[package]
name = "charon"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "*", features = [ "derive" ] }
serde_json = "*"
serde_yaml_ng = "*"
git2 = { version = "*", features = [ "https" ] }
anyhow = "*"
clap = { version = "*", features = [ "derive" ] }
curl = "*"
url = "*"
zbus_systemd = { version = "*", features = [ "systemd1" ] }
tokio = { version = "*", features = [ "full" ] }
tonic = "*"
prost = "*"
tracing = { version = "*", features = [ "log" ] }
tracing-subscriber = "*"

[dev-dependencies]
tempfile = "*"
lazy_static = "*"
libc = "*"
reqwest = "*"

[build-dependencies]
tonic-build = "*"

[features]
livetests = [ ]
